--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
      environment:
       POSTGRES_USER: effiadm
       POSTGRES_PASSWORD: pw123
-      POSTGRES_DB: efficlin
+      POSTGRES_DB: efficlindb
      ports:
      - "5432:5432"
      volumes:
      - postgres_data:/var/lib/postgresql/postgres_data
-
+     - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
     postgres_data:     
